<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:background="@color/background02"
             tools:context=".ui.fragment.tvshow.TVShowFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/parent_video">

        <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_red_light"
                android:id="@+id/appbar_layout">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:contentScrim="@android:color/white"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    android:id="@+id/collapsing_toolbar">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/title"
                            android:text="@string/airing_today"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentEnd="true"/>

                    <androidx.viewpager.widget.ViewPager
                            android:id="@+id/viewpager_tvshow_banner"
                            android:layout_marginTop="@dimen/_16sdp"
                            android:layout_below="@+id/title"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_210sdp"/>

                    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
                            android:id="@+id/worm_dots_indicator_tvshow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/_230sdp"
                            app:dotsStrokeColor="@android:color/black"
                            app:dotsSize="10dp"
                            app:dotsSpacing="3dp"
                            app:dotsColor="#FC0F3A"/>

                </RelativeLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout_tvShow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabSelectedTextColor="@android:color/white"
                    app:tabTextColor="@android:color/white"
                    android:layout_gravity="bottom"/>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_tvShow"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
            </androidx.recyclerview.widget.RecyclerView>

            <ProgressBar
                    android:id="@+id/progress_content_tvShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>