<resources>
    <string name="app_name">MovieCatalog</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="movie">MOVIE</string>
    <string name="tvshow">TV SHOW</string>
    <string name="title">Title :</string>
    <string name="date_release">Date Release :</string>
    <string name="overview">Overview :</string>

    <string name="movie_now_playing">NOW PLAYING</string>
    <string name="movie_popular">POPULAR</string>
    <string name="movie_top_related">TOP RELATED</string>
    <string name="movie_upcoming">UPCOMING</string>
    <string name="now_playing">Now Playing</string>
    <string name="status">Status :</string>
    <string name="runtime">Runtime :</string>
    <string name="vote_average">Vote Average :</string>
    <string name="vote_count">Vote Count :</string>
    <string name="keywords">Keywords :</string>
    <string name="cast">Cast :</string>
    <string name="similar_movie">Similar Movie :</string>
    <string name="recommendation_movie">Recommendation Movie :</string>
    <string name="airing_today">Airing Today</string>
    <string name="tvShow_on_the_air">ON THE AIR</string>
    <string name="tvShow_popular">POPULAR</string>
    <string name="tvShow_top_related">TOP RELATED</string>
    <string name="tvShow_airing_today">AIRING TODAY</string>
    <string name="total_seasons">Total Seasons :</string>
    <string name="total_episodes">Total Episodes :</string>
    <string name="similar_tv_show">Similar TV Show</string>
    <string name="recommendation_tv_show">Recommendation TV Show</string>
</resources>
